# Automated-Rhythm-Generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
arg/: __init__.py  infer.py  train.py  utils.py
arg/data/: anotate.py  build.py  preprocess.py
arg/model/: BaseModel.py  RGGRU.py  RGGRUAT.py  RGRoFormer.py  RGTR.py  __init__.py
