[project]
name = "automated-rhythm-generation"
version = "0.0.1"
authors = [{ name = "Jacob Lin", email = "jacob@csie.cool" }]
description = "ARG: Automated Rhythm Generation. Let's generate rhythm game maps automatically!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets",
    "torch>=2.0.0",
    "librosa",
    "numpy>=1.0.0",
    "accelerate",
    "huggingface_hub",
    "tqdm",
    "tensorboard",
]


[project.urls]
Homepage = "https://github.com/jacoblincool/automated-rhythm-generation"
Issues = "https://github.com/jacoblincool/automated-rhythm-generation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["arg/**/*", "pyproject.toml", "README.md", "LICENSE"]
[tool.hatch.build.targets.wheel]
packages = ["arg"]
